# ai-agent

./: .env.example  .gitignore  DOCKER.md  README.md  docker-compose.cloud.yml  docker-compose.infra.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  agent.py  chat.py  documents.py  dorm.py  health.py  rag.py
backend/app/core/: config.py  logger.py
backend/app/schemas/: agent.py  chat.py  document.py  dorm.py
backend/app/services/agent/: __init__.py  graph.py  state.py  tools.py
backend/app/services/dorm/: __init__.py  parser.py  service.py  vector_store.py
backend/app/services/llm/: __init__.py  chains.py  chat_model.py  embedding.py
backend/app/services/rag/: __init__.py  advanced_retrieval.py  bm25.py  ingestion.py  parser.py  query_rewrite.py  repository.py  reranker.py  retrieval.py  splitter.py  vector_store.py
backend/scripts/: dev.ps1  eval_data.py  eval_rag.py  reset_milvus.py  test_agent.py  test_api.py  test_milvus.py  test_qwen.py  test_rag.py  test_tavily.py  test_zilliz.py
docs/: 01-项目概览.md  02-架构设计.md  03-技术选型.md  04-RAG模块.md  05-Agent模块.md  06-API文档.md  07-部署运维.md  08-开发指南.md  README.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: AgentTrace.tsx  ChatInput.tsx  ChatPanel.tsx  Citations.tsx  MessageBubble.tsx
frontend/src/components/dorm/: DormGate.tsx  DormPanel.tsx
frontend/src/components/knowledge/: KnowledgeSidebar.tsx  RagSettings.tsx
frontend/src/lib/: api.ts  config.ts  types.ts  utils.ts
frontend/src/store/: chat.ts  dorm.ts  knowledge.ts
scripts/: analyze_wx.py  ingest_dorm.py
